Added hotpotato httpclient.. still tests with a single local service show that the standard httpurlconnection outperforms both hotpotato and apache httpcomponent's client lib by far. Streaming is still ~10-20x faster but does only function if there are no errors (timeouts etc)